# tiger

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/src/apps/qt_vtk/: MainTigerWindow.ui  adaptivetileoffsetclippingparametersdialog.h  adaptivetileoffsetclippingparametersdialog.ui  addblockloadparametersdialog.cxx  addblockloadparametersdialog.ui  addblockweightloadsparametersdialog.ui  barrelvaultparametersdialog.h  bendedsquareparametersdialog.cxx  bendedsquareparametersdialog.h  centerdirectionparametersdialog.cxx  cylinderparametersdialog.ui  equilateraltriangleparametersdialog.h  facesubdivisionparametersdialog.h  forcecapsparametersdialog.cxx  heightbisectionparametersdialog.h  main.cxx  normalizetessellationparametersdialog.cxx  platonicsolidparametersdialog.cxx  platonicsolidparametersdialog.h  resetblockloadsparametersdialog.ui  rotatetessellationparametersdialog.h  rotatetessellationparametersdialog.ui  saddleparametersdialog.h  squaregridparametersdialog.ui  squareparametersdialog.h  tiltingangleparametersdialog.cxx  tiltingangleparametersdialog.h  toggleblocksparametersdialog.cxx  toggleblocksparametersdialog.ui  torusparametersdialog.cxx
cpp/src/include/tiger/: equilibriumanalysis.h  geometries.h  utils.h
cpp/src/include/tiger/ds/: algorithms.h
cpp/src/include/tiger/tic/: assembly.h  geometricclass.h  interfaces.h
cpp/src/include/tiger/toolkit/: ray.h
cpp/src/include/tiger/workspace/: message.h
cpp/src/libs/: algorithms.cxx  assembly.cxx  block.cxx  equilibriumanalysis.cxx  geometricclass.cxx  geometries.cxx  interfaces.cxx  linesegment.cxx  ray.cxx  tessellation.cxx  vf.cxx  workspace.cxx
python/: evolve.py  main.py  playground.py  test_evolutionstepsmethod.py  test_evolutionstepsmethod_full_truncated_tetrahedra.py  test_evolutionstepsmethod_full_truncated_tetrahedron.py  test_evolutionstepsmethod_half_truncated_tetrahedra.py  test_evolutionstepsmethod_half_truncated_tetrahedron.py  test_evolutionstepsmethod_mecke.py  test_evolutionstepsmethod_octahedron.py  test_evolutionstepsmethod_tetrahedra.py  test_evolutionstepsmethod_tetrahedron.py  test_evolutionstepsmethod_tetrahedron2.py  test_evolutionstepsmethod_truncatedtetrahedron.py  test_geometry.py  test_heightbisectionmethod.py  test_tiltinganglemethod.py
python/apps/pyqt_vtk/: pyqt_vtk.py
python/apps/pyqt_vtk/forms/: barrelvaultdomainform.py  domainsubdivisionform.py  ellipticparaboloiddomainform.py  equilateraltriangledomainform.py  heightbisectionmethodform.py  monkeysaddledomainform.py  normalizedomainform.py  platonicsoliddomainform.py  regularpolygondomainform.py  saddledomainform.py  scaledomainform.py  squaredgriddomainform.py  squaredomainform.py  tiltinganglemethodform.py  torusdomainform.py  wavedomainform.py
python/apps/pyqt_vtk/helpers/: get_function_names_from_file.py  load_vtkactor_with_dcel.py
python/apps/vtk/: vtkworkspace.py
python/ds/: dcel.py  queue.py  vf.py
python/geometries/: closed.py  planar.py  platonicsolids.py
python/toolkit/: linesegment.py  plane.py  pvector.py  ray.py  utils.py
python/workspace/: workspace.py
src/: CMakeLists.txt  MainTigerWindow.cxx  MainTigerWindow.h  MainTigerWindow.ui  adaptivetileoffsetclippingparametersdialog.cxx  assembly.cxx  assembly.h  block.cxx  block.h  coneparametersdialog.ui  cyclideparametersdialog.cxx  cylinderparametersdialog.cxx  cylinderparametersdialog.h  cylinderparametersdialog.ui  dcel.cxx  dcel.h  edgedirectionparametersdialog.h  edgedirectionparametersdialog.ui  equilibriumanalysis.cxx  equilibriumanalysis.h  equilibriumanalysisparametersdialog.cxx  facesubdivisionparametersdialog.ui  geometricclass.cxx  geometricclass.h  geometries.cxx  geometries.h  interfaces.cxx  interfaces.h  linesegment.cxx  linesegment.h  message.cxx  normalizetessellationparametersdialog.h  plane.cxx  plane.h  ray.cxx  regularpolygonparametersdialog.cxx  regularpolygonparametersdialog.h  regularpolygonparametersdialog.ui  rotatetessellationparametersdialog.cxx  saddleparametersdialog.cxx  (+14 more)
src/apps/qt_vtk/: CMakeLists.txt  MainTigerWindow.cxx  MainTigerWindow.h  MainTigerWindow.ui  addblockloadparametersdialog.h  addblocktorqueloadparametersdialog.cxx  addblocktorqueloadparametersdialog.h  addblocktorqueloadparametersdialog.ui  addblockweightloadsparametersdialog.cxx  addblockweightloadsparametersdialog.h  addblockweightloadsparametersdialog.ui  archimedeansolidparametersdialog.cxx  archimedeansolidparametersdialog.h  archimedeansolidparametersdialog.ui  barrelvaultparametersdialog.cxx  barrelvaultparametersdialog.ui  bendedsquareparametersdialog.ui  centerdirectionparametersdialog.h  centerdirectionparametersdialog.ui  coneparametersdialog.cxx  coneparametersdialog.h  cyclideparametersdialog.h  edgedirectionparametersdialog.cxx  equilateraltriangleparametersdialog.cxx  equilateraltriangleparametersdialog.ui  equilibriumanalysisparametersdialog.h  equilibriumanalysisparametersdialog.ui  facesubdivisionparametersdialog.cxx  forcecapsparametersdialog.h  forcecapsparametersdialog.ui  heightbisectionparametersdialog.cxx  heightbisectionparametersdialog.ui  main.cxx  normalizetessellationparametersdialog.ui  paraboloidparametersdialog.cxx  paraboloidparametersdialog.h  paraboloidparametersdialog.ui  platonicsolidparametersdialog.ui  rectangleparametersdialog.cxx  rectangleparametersdialog.h  (+19 more)
src/include/tiger/: attributes.h  equilibriumanalysis.h  geometries.h  utils.h
src/include/tiger/ds/: algorithms.h  dcel.h  vf.h
src/include/tiger/tic/: assembly.h  block.h  geometricclass.h  interfaces.h  tessellation.h
src/include/tiger/toolkit/: algorithms.h  linesegment.h  plane.h
src/include/tiger/workspace/: message.h  workspace.h
src/libs/: CMakeLists.txt  algorithms.cxx  assembly.cxx  block.cxx  dcel.cxx  equilibriumanalysis.cxx  geometries.cxx  linesegment.cxx  message.cxx  plane.cxx  tessellation.cxx  utils.cxx  vf.cxx  workspace.cxx
